cargo_check_multi_2.log
warning: variable does not need to be mutable
  --> crates/forge-search/src/content.rs:54:13
   |
54 |         let mut results = Vec::new();
   |             ----^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: `forge-search` (lib) generated 1 warning (run `cargo fix --lib -p forge-search` to apply 1 suggestion)
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ElementState` and `MouseButton`
 --> crates/forge-test-tools/src/input_sim.rs:1:20
  |
1 | use winit::event::{ElementState, MouseButton, WindowEvent};
  |                    ^^^^^^^^^^^^  ^^^^^^^^^^^

warning: `forge-test-tools` (lib) generated 2 warnings (run `cargo fix --lib -p forge-test-tools` to apply 2 suggestions)
    Checking forge-app v0.1.0 (/app/crates/forge-app)
warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:371:13
    |
371 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0499]: cannot borrow `*self` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3328:17
     |
2454 |         let state = match self.state.as_mut() {
     |                           ---------- first mutable borrow occurs here
...
3328 |                 self.handle_input(
     |                 ^^^^ second mutable borrow occurs here
3329 |                     state,
     |                     ----- first borrow later used here

error[E0499]: cannot borrow `self.context_menu` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3332:21
     |
3328 |                 self.handle_input(
     |                 ---- ------------ first borrow later used by call
     |                 |
     |                 first mutable borrow occurs here
...
3332 |                     &mut self.context_menu,
     |                     ^^^^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `self.search_panel` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3333:21
     |
3328 |                 self.handle_input(
     |                 ---- ------------ first borrow later used by call
     |                 |
     |                 first mutable borrow occurs here
...
3333 |                     &mut self.search_panel,
     |                     ^^^^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here

For more information about this error, try `rustc --explain E0499`.
warning: `forge-app` (bin "forge") generated 1 warning
error: could not compile `forge-app` (bin "forge") due to 3 previous errors; 1 warning emitted
